# discord-llm-chatbot

./: !Discord AI Chatbot.code-workspace  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run_bot.bat
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.matplotlib/: fontlist-v390.json
cogs/: admin.py  reminders.json  reminders.py  websearch.py
cogs/extra_cogs/: COG_GUIDELINES.md
docs/: TODO.md  docker-migration-tracker.md  nas-docker-plan.md  webhooks.md
lore/: default.json  default.md
personas/: default.md
prompts/: context_template.txt  system.txt
src/: __init__.py  bot_app.py  config_service.py  conversation_batcher.py  conversation_memory.py  discord_client_adapter.py  http_app.py  logger_factory.py  lore_service.py  message_router.py  participation_policy.py  persona_service.py  prompt_template_engine.py  task_queue.py  tokenizer_service.py  tool_bridge.py  vision_utils.py  web_room_store.py
src/cogs/: admin.py
src/llm/: base.py  kobold_openai_client.py  multi_backend_client.py  openai_compat_client.py  openrouter_catalog.py  openrouter_client.py
src/utils/: correlation.py  logfmt.py  time_utils.py
src/web/static/: app.js  index.html
tests/: conftest.py  run_all_tests.py  test_budget_helper.py  test_llm_fallback.py  test_nsfw_and_lore.py  test_policy.py  test_smoke.py  test_split_for_discord.py
